menu-mobile added

--- a/client/app/components/common/common.component.styl
+++ b/client/app/components/common/common.component.styl
@@ -1,6 +1,7 @@
 @import 'nib'
 @import url(https://fonts.googleapis.com/css?family=Open\+Sans:400,300,700,600&subset=latin,cyrillic-ext,cyrillic)
 @import url(https://fonts.googleapis.com/css?family=Exo\+2:400,700,500,300&subset=latin,cyrillic)
+@import url(https://fonts.googleapis.com/icon?family=Material\+Icons)
 
 
 $bg-color = #fff
@@ -57,7 +58,7 @@ $container-width = 1208px
 	display none!important
 	
 .transition
-	transition color .2s ease-in-out
+	transition all .2s ease-in-out
 	
 .cursor-pointer
 	cursor pointer
