--- a/client/app/components/footer/footer.component.styl
+++ b/client/app/components/footer/footer.component.styl
@@ -1,2 +1,53 @@
 @import 'nib'
 
+.likearts-content .footer
+	background-color #fff
+	width 100%
+
+	&__info
+		width 100%
+		height  auto
+		padding 18px 0 17px 0
+		@extend .flex
+		@media screen and (max-width: $notebook)
+			flex-flow row wrap
+
+	&__logo
+		width 30%
+		@extend .flex
+		justify-content flex-start
+		@media screen and (max-width: $notebook)
+			width 100%
+			justify-content center
+
+	&__contact-items
+		width 70%
+		@extend .flex
+		justify-content space-between
+		@media screen and (max-width: $notebook)
+			width 100%
+			justify-content center
+		@media screen and (max-width: $tablet)
+			flex-flow column wrap
+			justify-content space-between
+
+	&__contact-item
+		@extend .flex
+		@media screen and (max-width: $notebook)
+			margin 0 20px
+		@media screen and (max-width: $tablet)
+			margin 10px
+
+	&__sign
+		margin 0 10px
+		font-size 1.4rem
+		@media screen and (max-width: $notebook)
+			font-size 1.2rem
+		&--phone
+			font-size 1.8rem
+			@media screen and (max-width: $notebook)
+				font-size 1.5rem
+
+
+
+
