--- a/client/app/components/menu/menu.component.styl
+++ b/client/app/components/menu/menu.component.styl
@@ -28,6 +28,8 @@
 		font-size 1.6rem
 		color #fff
 		text-align center
+		@media screen and (max-width: 1100px)
+			font-size 1.4rem
 		&:hover
 			background-color $secondary-color
 			.menu__other-items
