--- a/client/app/components/logo/logo.component.styl
+++ b/client/app/components/logo/logo.component.styl
@@ -20,6 +20,9 @@
 		user-select none
 		@media screen and (max-width: $notebook)
 			font-size 2.8rem
+		@media screen and (max-width: $phone)
+			font-size 2rem
+			margin 0 8px
 
 	&__sign
 		&--bold
