--- a/client/app/components/button/button.component.styl
+++ b/client/app/components/button/button.component.styl
@@ -7,3 +7,21 @@
 	border-radius 5px
 	user-select none
 	cursor pointer
+
+.likearts-content .atm-link-button
+	display inline-block
+	padding 10px 23px
+	font-size 1.4rem
+	border 1px solid #fff
+	border-radius 5px
+	user-select none
+	cursor pointer
+	color #fff
+	&:after
+		content '››'
+		position relative
+		margin-left 5px
+
+	&--black
+		color $secondary-color
+		border 1px solid $secondary-color
