--- a/client/app/components/menu/menu.component.styl
+++ b/client/app/components/menu/menu.component.styl
@@ -26,34 +26,34 @@
 
 	&__item
 		position relative
-		padding 25px 10px
+		padding 25px 15px
 		font-size 1.6rem
 		color #fff
 		text-align center
-		@media screen and (max-width: 1100px)
+		@media screen and (max-width: 1300px)
 			font-size 1.4rem
+			padding 25px 10px
 		&:hover
 			background-color $secondary-color
 			.menu__other-items
 				display flex
 		&--active
-			padding 25px 0 22px 0
-			border-bottom 3px solid #5C6BC0
-			@media screen and (max-width: $notebook)
-				padding 25px 50px
-				border-bottom 1px solid #039BE5
-				background-color #039BE5
+			padding 25px 15px 23px 15px
+			border-bottom 3px solid $secondary-color
 		&--mobile
 			width 100%
 			text-align left
 			padding 25px 50px
-			font-size 1.3rem
+			font-size 1.5rem
 			border-bottom 1px solid #039BE5
 			&:first-child
 				margin-top 50px
 			&:hover
-				padding 25px 50px
-				border-bottom 1px solid #039BE5
+				background-color inherit
+		&--mobile-active
+			background-color $secondary-color
+			&:hover
+				background-color $secondary-color
 
 	a
 		color #fff
