--- a/client/app/components/common/common.component.styl
+++ b/client/app/components/common/common.component.styl
@@ -15,7 +15,7 @@ $notebook = 1024px
 $desktop = 1600px
 $full-hd = 1920px
 
-$container-width = 1208px
+$container-width = 1208
 
 
 //helpers
@@ -41,7 +41,7 @@ $container-width = 1208px
 .divider
 	height 1px
 	width 100%
-	border-top 1px solid #E0E0E0
+	border-top 1px solid #959595
 	
 .cover
 	background-position center
@@ -62,6 +62,16 @@ $container-width = 1208px
 	
 .cursor-pointer
 	cursor pointer
+
+.large-desktop-visible
+	display inherit
+	@media screen and (max-width: 992px)
+		display none
+
+.large-desktop-hide
+	display none
+	@media screen and (max-width: 992px)
+		display inherit
 	
 .tablet-visible
 	display none
@@ -100,7 +110,7 @@ a
 		
 .likearts-content .container
 	width 100%
-	max-width $container-width
+	max-width $container-width px
 	margin 0 auto
 
 .likearts-content .main-content
@@ -116,7 +126,9 @@ a
 	width 80px
 	height 8px
 	background-color $primary-color
-	margin 20px auto
+	transform skew(-30deg, 0deg)
+	&--position
+		margin 20px auto
 	&--card-skew
 		margin 10px 0
 		background-color $secondary-color
