--- a/client/app/components/menu/menu.component.styl
+++ b/client/app/components/menu/menu.component.styl
@@ -65,7 +65,7 @@
 		width 250px
 		transform translateX(-250px)
 		background-color $primary-color
-		height 100vh
+		height 100%
 		z-index 99
 		@extend .transition
 		overflow auto
@@ -76,7 +76,7 @@
 		top 0
 		left 0
 		width 100%
-		height 100vh
+		height 100%
 		background-color #000
 		opacity 0.8
 		z-index 98
@@ -85,12 +85,14 @@
 	&__btn
 		display none
 		position fixed
-		top 10px
-		left 10px
+		top 0
+		left 0
 		padding 24px
 		cursor pointer
 		color $primary-color
+		background-color #fff
 		z-index 100
+		@extend .transition
 		@media screen and (max-width: $notebook)
 			display inherit
 
@@ -122,7 +124,9 @@
 
 
 .likearts-content .js-menu__btn--active
+	@extend .transition
 	color #fff
+	background-color inherit
 
 .likearts-content .js-is-open
 	transition transform .2s ease-in-out
