--- a/client/resources/icons/sprite/sprite.css
+++ b/client/resources/icons/sprite/sprite.css
@@ -18,37 +18,55 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 */
 .icon-chevron-left {
   background-image: url(sprite.png);
-  background-position: 0px 0px;
+  background-position: -128px 0px;
   width: 27px;
   height: 49px;
 }
 .icon-chevron-right {
   background-image: url(sprite.png);
-  background-position: -27px 0px;
+  background-position: -128px -49px;
   width: 27px;
   height: 49px;
 }
+.icon-circle-btn {
+  background-image: url(sprite.png);
+  background-position: 0px 0px;
+  width: 74px;
+  height: 148px;
+}
+.icon-circle-left {
+  background-image: url(sprite.png);
+  background-position: -74px 0px;
+  width: 54px;
+  height: 54px;
+}
+.icon-circle-right {
+  background-image: url(sprite.png);
+  background-position: -74px -54px;
+  width: 54px;
+  height: 54px;
+}
 .icon-clock {
   background-image: url(sprite.png);
-  background-position: -54px -27px;
+  background-position: -128px -125px;
   width: 22px;
   height: 22px;
 }
 .icon-geo {
   background-image: url(sprite.png);
-  background-position: -81px 0px;
+  background-position: -155px 0px;
   width: 16px;
   height: 24px;
 }
 .icon-phone {
   background-image: url(sprite.png);
-  background-position: 0px -49px;
+  background-position: -74px -108px;
   width: 20px;
   height: 20px;
 }
 .icon-plus {
   background-image: url(sprite.png);
-  background-position: -54px 0px;
+  background-position: -128px -98px;
   width: 27px;
   height: 27px;
 }
