--- a/client/app/components/button/button.component.styl
+++ b/client/app/components/button/button.component.styl
@@ -25,3 +25,16 @@
 	&--black
 		color $secondary-color
 		border 1px solid $secondary-color
+
+.likearts-content .atm-submit
+	padding 10px 50px
+	font-size 1.4rem
+	border-radius 5px
+	user-select none
+	cursor pointer
+	color #fff
+	background-color $primary-color
+	border 0!important
+	box-shadow none!important
+	outline none!important
+	
