--- a/client/app/components/main/sections/slider/slider.component.styl
+++ b/client/app/components/main/sections/slider/slider.component.styl
@@ -91,12 +91,16 @@
 		@media screen and (max-width: $tablet)
 			font-size 1.3rem
 
+.likearts-content .carousel-indicators
+	z-index 1!important
+
 .likearts-content .carousel-indicators li 
 	width 8px
 	height 8px
 	background-color #fff
 	border 0
 	margin 0 5px
+
 
 .likearts-content .carousel-indicators .active
 	position relative 
