--- a/client/app/components/modals/modals.component.styl
+++ b/client/app/components/modals/modals.component.styl
@@ -20,7 +20,7 @@
 	position fixed
 	top 25%
 	left 50%
-	transform translate(-50%, 0)
+	transform translate(-50%, 0%)
 	width 50%
 	height auto
 	background-color #fff
