--- a/client/app/components/pages/main/sections/production/production.component.styl
+++ b/client/app/components/pages/main/sections/production/production.component.styl
@@ -15,30 +15,25 @@
 	&__cards
 		position relative
 
-	&__circle-btn
-		display block
-		position absolute
-		top 50%
-		right -100px
-		transform translate(0, -50%)
-		width 74px
-		height 148px
-		@media screen and (max-width: 1400px)
-			display: none
-
 	&__btn
-		@extend .flex
-		margin 20px 0
-		@media screen and (min-width: 1400px)
-			display none
+		position absolute
+		width 60px
+		height 60px
+		cursor pointer
+		top 50%
+		transform translateY(-50%)
+		user-select none
+		@extend .transition
+		&--next
+			right -90px
+			@media screen and (max-width: 1500px)
+				right 7px
 
-	&__btn-icon
+	&__icon
 		position absolute
 		top 50%
 		left 50%
-		transform translate(-40%, -50%)
-		color #fff
-		font-size 5rem
+		transform translate(-50%, -50%)
 
 .likearts-content .card
 	width 100%
@@ -67,7 +62,7 @@
 			font-size 3rem
 
 	&__title
-		font-size 3rem
+		font-size 2.8rem
 		margin 10px 0
 		@media screen and (max-width: 1200px)
 			font-size 2.5rem
