--- a/client/app/components/pages/main/sections/slider/slider.component.styl
+++ b/client/app/components/pages/main/sections/slider/slider.component.styl
@@ -2,8 +2,8 @@
 
 .likearts-content .slider
 	position relative
-	@media screen and (max-width: $phone)
-		display none
+	//@media screen and (max-width: $phone)
+		//display none
 
 	&__text-content
 		position absolute
@@ -17,6 +17,8 @@
 		flex-flow column wrap
 		justify-content center
 		align-items flex-start
+		@media screen and (max-width: $phone)
+			padding 10px 60px
 
 		.skew
 			@media screen and (max-width: 992px)
@@ -90,9 +92,13 @@
 			font-size 1.5rem
 		@media screen and (max-width: $tablet)
 			font-size 1.3rem
+		@media screen and (max-width: $phone)
+			font-size 1rem
 
 .likearts-content .carousel-indicators
 	z-index 1!important
+	@media screen and (max-width: $phone)
+		display none
 
 .likearts-content .carousel-indicators li 
 	width 8px
