--- a/client/app/components/pages/main/sections/partners/partners.component.styl
+++ b/client/app/components/pages/main/sections/partners/partners.component.styl
@@ -3,20 +3,20 @@
 .likearts-content .partners
 	padding 40px 0
 
+	&__carousel
+		width 80%
+		margin 20px auto
+		@media screen and (max-width: $phone)
+			width 70%
+		@media screen and (max-width: 480px)
+			width 60%
+
 	&__title
 		font-size 4rem
 		text-align center
-		margin 20px 0
-
-	&__logotypes
-		@extend .flex
-		flex-flow row wrap
-		justify-content space-between
-		width 70%
-		margin 0 auto
-		padding 30px 0
+		margin 30px 0
 		@media screen and (max-width: $phone)
-			justify-content center
+			font-size 2rem
 
 	&__btn
 		position absolute
@@ -38,5 +38,29 @@
 		transform translate(-50%, -50%)
 
 	&__pic
-		margin 10px
+		margin 0 auto
+
+	.slick-prev
+		left -55px
+		width auto
+		height auto
+		&:before
+			content ''	
+			display block
+			width 54px
+			height 54px
+			background-image url(../resources/icons/circle-left.png)
+
+	.slick-next
+		right -55px
+		width auto
+		height auto
+		&:before
+			content ''
+			display block
+			width 54px
+			height 54px
+			background-image url(../resources/icons/circle-right.png)
+		
+
 
