--- a/client/app/components/pages/main/sections/production/production.component.styl
+++ b/client/app/components/pages/main/sections/production/production.component.styl
@@ -12,28 +12,26 @@
 		@media screen and (max-width: $phone)
 			font-size 2rem
 
-	&__cards
-		position relative
+	.slick-prev
+		display none
+		&:before
+			display none
 
-	&__btn
-		position absolute
-		width 60px
-		height 60px
-		cursor pointer
-		top 50%
-		transform translateY(-50%)
-		user-select none
-		@extend .transition
-		&--next
-			right -90px
-			@media screen and (max-width: 1500px)
-				right 7px
-
-	&__icon
-		position absolute
-		top 50%
-		left 50%
-		transform translate(-50%, -50%)
+	.slick-next
+		right -90px
+		width auto
+		height auto
+		@media screen and (max-width: 1500px)
+			right 9px	
+		@media screen and (max-width: $phone)
+			right 10px
+		&:before
+			content ''
+			display block
+			width 74px
+			height 148px
+			@extend .cover
+			background-image url(../resources/icons/circle-btn.png)
 
 .likearts-content .card
 	width 100%
@@ -41,28 +39,22 @@
 	min-height 560px
 	padding 40px 30px
 	color #fff
-	margin 10px 0
+	margin 10px 10px
 	@extend.cover
-	&--1
-		background-image url(../resources/img/production-items/production-item-1.png)
-	&--2
-		background-image url(../resources/img/production-items/production-item-2.png)
-	&--3
-		background-image url(../resources/img/production-items/production-item-3.png)
-	&--4
-		background-image url(../resources/img/production-items/production-item-4.png)
 	@media screen and (max-width: 1200px)
 		padding 20px
 	@media screen and (max-width: $tablet)
 		padding 40px
-		min-height 0
+	@media screen and (max-width: $phone)
+		padding 20px
+
 
 	&__number
 		&--large
 			font-size 3rem
 
 	&__title
-		font-size 2.8rem
+		font-size 2.5rem
 		margin 10px 0
 		@media screen and (max-width: 1200px)
 			font-size 2.5rem
@@ -70,7 +62,4 @@
 	&__btn
 		margin 25px 0
 
-
-.likearts-content .col-md-override
-	padding-left 10px
-	padding-right 10px
+	
