--- a/client/app/components/pages/main/sections/slider/slider.component.styl
+++ b/client/app/components/pages/main/sections/slider/slider.component.styl
@@ -5,6 +5,12 @@
 	//@media screen and (max-width: $phone)
 		//display none
 
+	&__pic
+		height auto
+		@media screen and (max-width: $phone)
+			min-height 400px
+			object-fit cover
+
 	&__text-content
 		position absolute
 		top 0
@@ -92,8 +98,6 @@
 			font-size 1.5rem
 		@media screen and (max-width: $tablet)
 			font-size 1.3rem
-		@media screen and (max-width: $phone)
-			font-size 1rem
 
 .likearts-content .carousel-indicators
 	z-index 1!important
@@ -124,3 +128,4 @@
 		height 20px
 		border-radius 50%
 		border 1px solid #fff
+
