news page finished

--- a/client/app/components/common/common.component.styl
+++ b/client/app/components/common/common.component.styl
@@ -92,6 +92,7 @@ $container-width = 1208
 	background-repeat repeat
 	color $primary-color-text
 	font-weight 400
+	-webkit-font-smoothing antialiased
 	
 a
 	&:hover
