catalog item page added

--- a/client/app/components/pagination/pagination.component.styl
+++ b/client/app/components/pagination/pagination.component.styl
@@ -1,12 +1,14 @@
 @import 'nib'
 
 .likearts-content .atm-pagination
-	
+	margin 20px 0
+
 	&__list
 		list-style-type none
 		@extend .flex
 		justify-content flex-start
 		padding 0
+		margin 0
 		@media screen and (max-width: $phone)
 			justify-content center
 
