--- a/client/resources/icons/sprite/sprite.css
+++ b/client/resources/icons/sprite/sprite.css
@@ -52,3 +52,9 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
   width: 27px;
   height: 27px;
 }
+.icon-tabs {
+  background-image: url(sprite.png);
+  background-position: -81px -24px;
+  width: 13px;
+  height: 21px;
+}
