--- a/client/app/components/modals/modals.component.styl
+++ b/client/app/components/modals/modals.component.styl
@@ -25,7 +25,7 @@
 	height auto
 	background-color #fff
 	z-index 101
-	@media screen and (max-width: $phone)
+	@media screen and (max-width: 992px)
 		width 80%
 
 	&__close
