--- a/client/app/components/common/common.component.styl
+++ b/client/app/components/common/common.component.styl
@@ -42,6 +42,8 @@ $container-width = 1208
 	height 1px
 	width 100%
 	border-top 1px solid #959595
+	&--gray
+		border-top 1px solid #cccccc
 	
 .cover
 	background-position center
